--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,11 @@
 spring:
   application:
-    name:
+    name: config-default
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
